# cpp-workshop

./: CMakeLists.txt  callbacks.h  close_main_proc_from_new_thread.cpp  custom_smart_pointers.h  deduce_func_return_value.cpp  get_func_type.cpp  io_examples.cpp  noncopyable_type.cpp  operator_overloading_subtleties.cpp  pointer_to_member_function.cpp  smart_pointers.cpp  smart_pointers.h  smart_pointers_test.cpp  testAll1.cpp  testAll2.cpp
EntryPoint/: CMakeLists.txt  header.hpp  main.cpp  source1.cpp  source1.hpp
EntryPoint1/: CMakeLists.txt  source2.cpp
MPL/: README.md
MPL/QuickSort/: QuickSort.hpp  QuickSort_aux.cpp  QuickSort_aux.hpp  main.cpp
MPL/SpiralMatrix/: SpiralMatrix.hpp  main.cpp
MPL/SpiralMatrix/Tests/: input.txt  output.txt
OOP/: constructor_destructors_inheritance.h  copy_of_compex_obj.h  inheritance_access_modifier.h  iterators_types.h  main.cpp  oop.h  virtual.h  virtual_inheritance.h
draft/: CMakeLists.txt  main.cpp
sample/: CMakeLists.txt  expected.txt  input.txt  notepad.cpp
tests/: CMakeLists.txt  from_chars_vs_stoi.cpp  runTests.cpp  smart_pointers.cpp  smart_pointers.h  smart_pointers_test.cpp
